# Homework_proj-repo

./: .clang-format  CMakeLists.txt  Makefile  pyproject.toml  ruff.toml
.github/workflows/: clang-format-check.yml  ruff-check.yml  tests.yml
include/: stack.h
scripts/: show-formatting-issues.sh
src/Advanced bracket balance/: CMakeLists.txt  bracket_balance.c  bracket_balance.h  main.c  makefile  string_filling.c  string_filling.h
src/Arrangement of queens/: best_implementation.py  complexity.md  iteration_solution.py  recursive_solution.py
src/Control work 1/: another_polydrome.c  largest_sum_digits.c  monkey_sort.c
src/Huffman code/: huffman_code.py  str_huffman_code.py
src/List/: cyclic_list.c  cyclic_list.h  list.c  list.h
src/Optimal quick sorting/: filling_array.c  filling_array.h  main.c  makefile  quick_sort.c  quick_sort.h  quick_sort.s
src/Shunting yard/: .makefile.swp  CMakeLists.txt  filling_expression.c  filling_expression.h  main.c  makefile
src/Sicarians rhyme/: makefile  rhyme  rhyme.c
src/Sort Array/: sort algoritm for array.py
src/Sorted list/: functional_menu.c  functional_menu.h  main.c  makefile  test_functional_menu.c  test_functional_menu.h
src/Stack/: CMakeLists.txt  stack.c  stack.h
src/curry_fuctions/: curry.py
src/extended Euclid algoritm/: euclid.py
src/sort/: gnome_sort.py  heap_sort.py  quick_sort.py
tests/unit/: property_based_test.py  test_heap_sort.py
